fix: resolve merge conflict between feature/books and develop